--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- reset -->
-    <link rel="stylesheet" href="/meyer-reset.css">
+    <link rel="stylesheet" href="meyer-reset.css">
     <!-- style sheet -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!--  google fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -50,6 +50,6 @@
   </section>
 
    <!-- link to javascript -->
-  <script src="/myscript.js"></script>
+  <script src="myscript.js"></script>
   </body>
 </html>
